# bilibili-subtitle-converter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bcc.cc.72031BE98F000DB1.idx  bcc.h.21E7D7C4F532CE3F.idx  converter.cc.9B4FD94D6B020754.idx  converter.h.F068F651F4009231.idx  fs.cc.395890D071695CE1.idx  fs.h.7D9CDF33AA2D9330.idx  main.cc.437652E907F96F8E.idx  srt.cc.A648CFE400AC73E1.idx  srt.h.483B221BEDD14F64.idx  subtitle.h.7AFB02FD3EBD53E3.idx  time.cc.BE9FA36BBA7ECD04.idx  time.h.800812F4EE373BEE.idx  tools.h.60A031A09D28460A.idx
include/: bcc.h  converter.h  srt.h  subtitle.h  time.h
include/tools/: fs.h  time.h  tools.h
src/: bcc.cc  converter.cc  main.cc  srt.cc  time.cc
src/tools/: fs.cc  time.cc
